--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href=".//assets/css/style.css" />
   </head>
   <body>
     <div class="logo">
-      <img src="/assets/img/LOGO ORKUT.png" alt="logo do Orkut" />
+      <img src=".//assets/img/LOGO ORKUT.png" alt="logo do Orkut" />
     </div>
 
     <div class="container">
@@ -55,6 +55,6 @@
         </div>
       </div>
     </div>
-    <script src="/assets/js/script.js"></script>
+    <script src=".//assets/js/script.js"></script>
   </body>
 </html>
